--- a/_posts/2013-05-05-crackme-03.md
+++ b/_posts/2013-05-05-crackme-03.md
@@ -14,6 +14,8 @@ Olá!
 Como [outrora](http://www.hackingbits.com/2013/04/crack-them-all.html)
 prometido, disponibilizo-lhes o novo crackme (crackme.03.32 - Linux/x86).
 
+<!--more-->
+
 Esta versão segue uma abordagem diferente das anteriores, pois não há input a
 ser descoberto. ;D
 
