--- a/_posts/blog/2013-05-05-crackme-03.md
+++ b/_posts/blog/2013-05-05-crackme-03.md
@@ -4,7 +4,7 @@ title: Crackme 03
 date: '2013-05-05T00:10:00.001-03:00'
 author: geyslan
 categories: blog
-excerpt:
+excerpt: ""
 tags: [linux, assembly, elf, crackme, cryptography, hacking, reverse engineering, portuguese]
 share: true
 modified: '2013-06-06T22:41:04.961-03:00'
