fix relative paths

--- a/_posts/blog/2013-05-05-crackme-03.md
+++ b/_posts/blog/2013-05-05-crackme-03.md
@@ -14,8 +14,8 @@ blogger_orig_url: http://www.hackingbits.com/2013/05/crackme-03.html
 
 Olá!
 
-Como [outrora](http://www.hackingbits.com/2013/04/crack-them-all.html)
-prometido, disponibilizo-lhes o novo crackme (crackme.03.32 - Linux/x86).
+Como [outrora](/blog/crack-them-all) prometido, disponibilizo-lhes o
+novo crackme (crackme.03.32 - Linux/x86).
 
 <!--more-->
 
